--- a/contact_ar.html
+++ b/contact_ar.html
@@ -10,24 +10,24 @@
         content="Iteck - Multi-Purpose Vue.js Nuxt.js Template" />
     <meta data-n-head="ssr" name="keywords" content="Vue Nuxtjs Template Iteck Multi-Purpose themeforest" />
     <meta data-n-head="ssr" name="format-detection" content="telephone=no" />
-    <link data-n-head="ssr" rel="shortcut icon" sizes="16x16" href="/assets/img/fav.png" />
+    <link data-n-head="ssr" rel="shortcut icon" sizes="16x16" href="assets/img/fav.png" />
     <link data-n-head="ssr" rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" />
     <link data-n-head="ssr" rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500;600;700&display=swap" />
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/lib/bootstrap-icons.css" />
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/lib/swiper.min.css" />
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/lib/bootstrap.min.css" />
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/lib/all.min.css" />
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/lib/animate.css" />
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/style.css" />
-    <script data-n-head="ssr" src="/assets/js/lib/pace.js"></script>
-    <script data-n-head="ssr" src="/assets/js/lib/bootstrap.bundle.min.js"></script>
-    <script data-n-head="ssr" src="/assets/js/lib/mixitup.min.js"></script>
-    <script data-n-head="ssr" src="/assets/js/lib/wow.min.js"></script>
-    <script data-n-head="ssr" src="/assets/js/lib/html5shiv.min.js"></script>
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/lib/bootstrap-icons.css" />
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/lib/swiper.min.css" />
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/lib/bootstrap.min.css" />
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/lib/all.min.css" />
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/lib/animate.css" />
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/style.css" />
+    <script data-n-head="ssr" src="assets/js/lib/pace.js"></script>
+    <script data-n-head="ssr" src="assets/js/lib/bootstrap.bundle.min.js"></script>
+    <script data-n-head="ssr" src="assets/js/lib/mixitup.min.js"></script>
+    <script data-n-head="ssr" src="assets/js/lib/wow.min.js"></script>
+    <script data-n-head="ssr" src="assets/js/lib/html5shiv.min.js"></script>
     <script data-n-head="ssr" src="https://kit.fontawesome.com/d8d8f76b04.js"></script>
-    <script data-n-head="ssr" src="/assets/js/main.js" ssr="false"></script>
+    <script data-n-head="ssr" src="assets/js/main.js" ssr="false"></script>
     <link rel="preload" href="/_nuxt/ed77579.js" as="script" />
     <link rel="preload" href="/_nuxt/28d9667.js" as="script" />
     <link rel="preload" href="/_nuxt/css/7a3f40f.css" as="style" />
@@ -52,7 +52,7 @@
 
                     <nav class="navbar navbar-expand-lg navbar-light style-5 bg-transparent">
                         <div class="container-fluid">
-                            <a href="#" class="navbar-brand"><img src="/assets/img/logo_home5.png" alt /></a>
+                            <a href="#" class="navbar-brand"><img src="assets/img/logo_home5.png" alt /></a>
                             <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                                 aria-controls="navbarSupportedContent" aria-expanded="false"
                                 aria-label="Toggle navigation" class="navbar-toggler">
@@ -87,7 +87,7 @@
                                             data-bs-toggle="dropdown" aria-expanded="false"
                                             class="icon-25 dropdown-toggle p-0 border-0 bg-transparent rounded-circle img-cover d-flex align-items-center">
                                             <small class="ms-2">العربية</small>
-                                            <img style="margin: 0px 0px 0px 12px;" src="/assets/img/icons/saudi-arabia.png" alt>
+                                            <img style="margin: 0px 0px 0px 12px;" src="assets/img/icons/saudi-arabia.png" alt>
                                         </button>
                                         <ul aria-labelledby="dropdownMenuButton1" class="dropdown-menu text-end">
                                             <li><a href="contact_ar.html" class="dropdown-item">العربية</a></li>
@@ -178,8 +178,8 @@
                                             </form>
                                         </div>
                                     </div>
-                                    <img src="/assets/img/icons/contact_a.png" alt class="contact_a" />
-                                    <img src="/assets/img/icons/contact_message.png" alt class="contact_message" />
+                                    <img src="assets/img/icons/contact_a.png" alt class="contact_a" />
+                                    <img src="assets/img/icons/contact_message.png" alt class="contact_message" />
                                 </div>
                             </div>
                         </section>
@@ -254,7 +254,7 @@
                                 <div class="row align-items-center">
                                     <div class="col-lg-3 col-sm-6 mb-3 mb-lg-0">
                                         <div class="logo">
-                                            <img src="/assets/img/logo_foot_home5.png" alt="شعار الشركة">
+                                            <img src="assets/img/logo_foot_home5.png" alt="شعار الشركة">
                                         </div>
                                     </div>
                                     <div class="col-lg-6 text-center">
