--- a/About_Us.html
+++ b/About_Us.html
@@ -10,24 +10,24 @@
         content="Can Tec - Multi-Purpose Vue.js Nuxt.js Template">
     <meta data-n-head="ssr" name="keywords" content="Vue Nuxtjs Template Can Tec Multi-Purpose themeforest">
     <meta data-n-head="ssr" name="format-detection" content="telephone=no">
-    <link data-n-head="ssr" rel="shortcut icon" sizes="16x16" href="/assets/img/fav.png">
+    <link data-n-head="ssr" rel="shortcut icon" sizes="16x16" href="assets/img/fav.png">
     <link data-n-head="ssr" rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap">
     <link data-n-head="ssr" rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500;600;700&display=swap">
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/lib/bootstrap-icons.css">
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/lib/swiper.min.css">
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/lib/bootstrap.min.css">
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/lib/all.min.css">
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/lib/animate.css">
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/style.css">
-    <script data-n-head="ssr" src="/assets/js/lib/pace.js"></script>
-    <script data-n-head="ssr" src="/assets/js/lib/bootstrap.bundle.min.js"></script>
-    <script data-n-head="ssr" src="/assets/js/lib/mixitup.min.js"></script>
-    <script data-n-head="ssr" src="/assets/js/lib/wow.min.js"></script>
-    <script data-n-head="ssr" src="/assets/js/lib/html5shiv.min.js"></script>
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/lib/bootstrap-icons.css">
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/lib/swiper.min.css">
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/lib/bootstrap.min.css">
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/lib/all.min.css">
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/lib/animate.css">
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/style.css">
+    <script data-n-head="ssr" src="assets/js/lib/pace.js"></script>
+    <script data-n-head="ssr" src="assets/js/lib/bootstrap.bundle.min.js"></script>
+    <script data-n-head="ssr" src="assets/js/lib/mixitup.min.js"></script>
+    <script data-n-head="ssr" src="assets/js/lib/wow.min.js"></script>
+    <script data-n-head="ssr" src="assets/js/lib/html5shiv.min.js"></script>
     <script data-n-head="ssr" src="https://kit.fontawesome.com/d8d8f76b04.js"></script>
-    <script data-n-head="ssr" src="/assets/js/main.js" ssr="false"></script>
+    <script data-n-head="ssr" src="assets/js/main.js" ssr="false"></script>
     <link rel="preload" href="/_nuxt/ed77579.js" as="script">
     <link rel="preload" href="/_nuxt/28d9667.js" as="script">
     <link rel="preload" href="/_nuxt/css/7a3f40f.css" as="style">
@@ -51,7 +51,7 @@
 
                     <nav class="navbar navbar-expand-lg navbar-light style-5 bg-transparent">
                         <div class="container-fluid"><a href="#" class="navbar-brand"><img
-                                    src="/assets/img/logo_home5.png" alt></a> <button type="button"
+                                    src="assets/img/logo_home5.png" alt></a> <button type="button"
                                 data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                                 aria-controls="navbarSupportedContent" aria-expanded="false"
                                 aria-label="Toggle navigation" class="navbar-toggler"><span
@@ -79,7 +79,7 @@
                                     <div class="dropdown"><button type="button" id="dropdownMenuButton1"
                                             data-bs-toggle="dropdown" aria-expanded="false"
                                             class="icon-25 dropdown-toggle p-0 border-0 bg-transparent rounded-circle img-cover"><img
-                                                src="/assets/img/icons/english.png" alt class="me-2">
+                                                src="assets/img/icons/english.png" alt class="me-2">
                                             <small>English</small></button>
                                         <ul aria-labelledby="dropdownMenuButton1" class="dropdown-menu">
                                             <li><a href="#" class="dropdown-item"> English</a></li>
@@ -104,7 +104,7 @@
                         <div class="container">
                             <div class="content">
                                 <div class="links"><a href="#"> Home </a> <a href="#" class="ms-1"> About Us </a></div>
-                                <h2> About Our Company </h2> <img src="/assets/img/header/head7_rock.png" alt
+                                <h2> About Our Company </h2> <img src="assets/img/header/head7_rock.png" alt
                                     class="side-img slide_up_down">
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                             <div class="container">
                                 <div class="row align-items-center">
                                     <div class="col-lg-6">
-                                        <div class="img img-cover"><img src="/assets/img/about/about2.png" alt></div>
+                                        <div class="img img-cover"><img src="assets/img/about/about2.png" alt></div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="info px-lg-5">
@@ -159,8 +159,8 @@
                                     </div>
                                     
                                 </div>
-                            </div> <img src="/assets/img/about/about2_pattern_l.png" alt class="pattern_l"> <img
-                                src="/assets/img/about/about2_pattern_r.png" alt class="pattern_r">
+                            </div> <img src="assets/img/about/about2_pattern_l.png" alt class="pattern_l"> <img
+                                src="assets/img/about/about2_pattern_r.png" alt class="pattern_r">
                         </section>
                         <section class="timeline section-padding bg-gray5">
                             <div class="container">
@@ -263,15 +263,15 @@
                                     <h2 class="mb-20"> Trusted By Thousands <span> Business </span></h2>
                                 </div>
                                 <div class="clients-content"><a href="#" class="client-logo"><img
-                                            src="/assets/img/logos/شركاء1.PNG" alt></a><a href="#" class="client-logo"><img
-                                            src="/assets/img/logos/شركاء 2.PNG" alt></a><a href="#" class="client-logo"><img
-                                            src="/assets/img/logos/شركاء 3.PNG" alt></a><a href="#" class="client-logo"><img
-                                            src="/assets/img/logos/شركاء 4.PNG" alt></a><a href="#" class="client-logo"><img
-                                            src="/assets/img/logos/شركاء 5.PNG" alt></a><a href="#" class="client-logo"><img
-                                            src="/assets/img/logos/شركاء6.PNG" alt></a><a href="#" class="client-logo"><img
-                                            src="/assets/img/logos/شركاء7.jpg" alt></a><a href="#" class="client-logo"><img
-                                            src="/assets/img/logos/شركاء8.PNG" alt></a><a href="#" class="client-logo"><img
-                                            src="/assets/img/logos/شركاء9.PNG" alt></a></div>
+                                            src="assets/img/logos/شركاء1.PNG" alt></a><a href="#" class="client-logo"><img
+                                            src="assets/img/logos/شركاء 2.PNG" alt></a><a href="#" class="client-logo"><img
+                                            src="assets/img/logos/شركاء 3.PNG" alt></a><a href="#" class="client-logo"><img
+                                            src="assets/img/logos/شركاء 4.PNG" alt></a><a href="#" class="client-logo"><img
+                                            src="assets/img/logos/شركاء 5.PNG" alt></a><a href="#" class="client-logo"><img
+                                            src="assets/img/logos/شركاء6.PNG" alt></a><a href="#" class="client-logo"><img
+                                            src="assets/img/logos/شركاء7.jpg" alt></a><a href="#" class="client-logo"><img
+                                            src="assets/img/logos/شركاء8.PNG" alt></a><a href="#" class="client-logo"><img
+                                            src="assets/img/logos/شركاء9.PNG" alt></a></div>
                             </div>
 
                         </section>
@@ -335,7 +335,7 @@
                                 <div class="row">
                                     <div class="col-lg-3 col-sm-6">
                                         <div class="logo">
-                                            <img src="/assets/img/logo_foot_home5.png" alt />
+                                            <img src="assets/img/logo_foot_home5.png" alt />
                                         </div>
                                     </div>
                                     <div class="col-lg-6 text-center">
