--- a/projects.html
+++ b/projects.html
@@ -10,24 +10,24 @@
         content="Can Tec - Multi-Purpose Vue.js Nuxt.js Template">
     <meta data-n-head="ssr" name="keywords" content="Vue Nuxtjs Template Can Tec Multi-Purpose themeforest">
     <meta data-n-head="ssr" name="format-detection" content="telephone=no">
-    <link data-n-head="ssr" rel="shortcut icon" sizes="16x16" href="/assets/img/fav.png">
+    <link data-n-head="ssr" rel="shortcut icon" sizes="16x16" href="assets/img/fav.png">
     <link data-n-head="ssr" rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap">
     <link data-n-head="ssr" rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500;600;700&display=swap">
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/lib/bootstrap-icons.css">
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/lib/swiper.min.css">
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/lib/bootstrap.min.css">
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/lib/all.min.css">
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/lib/animate.css">
-    <link data-n-head="ssr" rel="stylesheet" href="/assets/css/style.css">
-    <script data-n-head="ssr" src="/assets/js/lib/pace.js"></script>
-    <script data-n-head="ssr" src="/assets/js/lib/bootstrap.bundle.min.js"></script>
-    <script data-n-head="ssr" src="/assets/js/lib/mixitup.min.js"></script>
-    <script data-n-head="ssr" src="/assets/js/lib/wow.min.js"></script>
-    <script data-n-head="ssr" src="/assets/js/lib/html5shiv.min.js"></script>
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/lib/bootstrap-icons.css">
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/lib/swiper.min.css">
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/lib/bootstrap.min.css">
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/lib/all.min.css">
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/lib/animate.css">
+    <link data-n-head="ssr" rel="stylesheet" href="assets/css/style.css">
+    <script data-n-head="ssr" src="assets/js/lib/pace.js"></script>
+    <script data-n-head="ssr" src="assets/js/lib/bootstrap.bundle.min.js"></script>
+    <script data-n-head="ssr" src="assets/js/lib/mixitup.min.js"></script>
+    <script data-n-head="ssr" src="assets/js/lib/wow.min.js"></script>
+    <script data-n-head="ssr" src="assets/js/lib/html5shiv.min.js"></script>
     <script data-n-head="ssr" src="https://kit.fontawesome.com/d8d8f76b04.js"></script>
-    <script data-n-head="ssr" src="/assets/js/main.js" ssr="false"></script>
+    <script data-n-head="ssr" src="assets/js/main.js" ssr="false"></script>
     <link rel="preload" href="/_nuxt/ed77579.js" as="script">
     <link rel="preload" href="/_nuxt/28d9667.js" as="script">
     <link rel="preload" href="/_nuxt/css/7a3f40f.css" as="style">
@@ -52,7 +52,7 @@
 
                     <nav class="navbar navbar-expand-lg navbar-light style-5">
                         <div class="container-fluid"><a href="#" class="navbar-brand"><img
-                                    src="/assets/img/logo_home5.png" alt></a> <button type="button"
+                                    src="assets/img/logo_home5.png" alt></a> <button type="button"
                                 data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                                 aria-controls="navbarSupportedContent" aria-expanded="false"
                                 aria-label="Toggle navigation" class="navbar-toggler"><span
@@ -80,7 +80,7 @@
                                     <div class="dropdown"><button type="button" id="dropdownMenuButton1"
                                             data-bs-toggle="dropdown" aria-expanded="false"
                                             class="icon-25 dropdown-toggle p-0 border-0 bg-transparent rounded-circle img-cover"><img
-                                                src="/assets/img/icons/english.png" alt class="me-2">
+                                                src="assets/img/icons/english.png" alt class="me-2">
                                             <small>English</small></button>
                                         <ul aria-labelledby="dropdownMenuButton1" class="dropdown-menu">
                                             <li><a href="#" class="dropdown-item"> English</a></li>
@@ -123,7 +123,7 @@
                                         <div class="row mix-container">
                                             <div class="col-lg-4 mix security consultation">
                                                 <div class="portfolio-card mb-50">
-                                                    <div class="img"><img src="/assets/img/projects/prog/1.jpeg" alt>
+                                                    <div class="img"><img src="assets/img/projects/prog/1.jpeg" alt>
                                                     </div>
                                                     <div class="info">
                                                         <h5><a href="/page-single-project-5">
@@ -142,7 +142,7 @@
                                             </div>
                                             <div class="col-lg-4 mix design security">
                                                 <div class="portfolio-card mb-50">
-                                                    <div class="img"><img src="/assets/img/projects/prog/2.png" alt>
+                                                    <div class="img"><img src="assets/img/projects/prog/2.png" alt>
                                                     </div>
                                                     <div class="info">
                                                         <h5><a href="/page-single-project-5">
@@ -163,7 +163,7 @@
                                             </div>
                                             <div class="col-lg-4 mix website development">
                                                 <div class="portfolio-card mb-50">
-                                                    <div class="img"><img src="/assets/img/projects/prog/3.jpeg" alt>
+                                                    <div class="img"><img src="assets/img/projects/prog/3.jpeg" alt>
                                                     </div>
                                                     <div class="info">
                                                         <h5><a href="/page-single-project-5">
@@ -183,7 +183,7 @@
                                             </div>
                                             <div class="col-lg-4 mix cloud design">
                                                 <div class="portfolio-card mb-50">
-                                                    <div class="img"><img src="/assets/img/projects/4.png" alt></div>
+                                                    <div class="img"><img src="assets/img/projects/4.png" alt></div>
                                                     <div class="info">
                                                         <h5><a href="/page-single-project-5">
                                                                 Okpay E-Wallet Optimized
@@ -201,7 +201,7 @@
                                             </div>
                                             <div class="col-lg-4 mix website development cloud">
                                                 <div class="portfolio-card mb-50">
-                                                    <div class="img"><img src="/assets/img/projects/5.png" alt></div>
+                                                    <div class="img"><img src="assets/img/projects/5.png" alt></div>
                                                     <div class="info">
                                                         <h5><a href="/page-single-project-5">
                                                                 e-Commerce Dashboard
@@ -221,7 +221,7 @@
                                             </div>
                                             <div class="col-lg-4 mix design consultation">
                                                 <div class="portfolio-card mb-50">
-                                                    <div class="img"><img src="/assets/img/projects/7.png" alt></div>
+                                                    <div class="img"><img src="assets/img/projects/7.png" alt></div>
                                                     <div class="info">
                                                         <h5><a href="/page-single-project-5">
                                                                 Crypto Blockchain
@@ -240,7 +240,7 @@
                                             </div>
                                             <div class="col-lg-4 mix cloud design">
                                                 <div class="portfolio-card mb-50">
-                                                    <div class="img"><img src="/assets/img/projects/1.png" alt></div>
+                                                    <div class="img"><img src="assets/img/projects/1.png" alt></div>
                                                     <div class="info">
                                                         <h5><a href="/page-single-project-5">
                                                                 Car Rental Dashboard
@@ -258,7 +258,7 @@
                                             </div>
                                             <div class="col-lg-4 mix security cloud">
                                                 <div class="portfolio-card mb-50">
-                                                    <div class="img"><img src="/assets/img/projects/2.png" alt></div>
+                                                    <div class="img"><img src="assets/img/projects/2.png" alt></div>
                                                     <div class="info">
                                                         <h5><a href="/page-single-project-5">
                                                                 Encrypt Blockchain
@@ -277,7 +277,7 @@
                                             </div>
                                             <div class="col-lg-4 mix development consultation">
                                                 <div class="portfolio-card">
-                                                    <div class="img"><img src="/assets/img/projects/6.png" alt></div>
+                                                    <div class="img"><img src="assets/img/projects/6.png" alt></div>
                                                     <div class="info">
                                                         <h5><a href="/page-single-project-5">
                                                                 Robotchat AI Development
@@ -311,9 +311,9 @@
                                                     opportunity for
                                                     <span>
                                                         bigger success
-                                                        <img src="/assets/img/header/head5_line.png" alt
+                                                        <img src="assets/img/header/head5_line.png" alt
                                                             class="head-line"> <img
-                                                            src="/assets/img/header/head5_pen.png" alt
+                                                            src="assets/img/header/head5_pen.png" alt
                                                             class="head-pen"></span>
                                                 </h2>
                                             </div>
@@ -326,7 +326,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div> <img src="/assets/img/contact_globe.svg" alt class="contact_globe">
+                            </div> <img src="assets/img/contact_globe.svg" alt class="contact_globe">
                         </section>
                     </main>
                     <footer nowave="true" class="style-5 border-top brd-gray">
@@ -387,7 +387,7 @@
                                 <div class="row">
                                     <div class="col-lg-3 col-sm-6">
                                         <div class="logo">
-                                            <img src="/assets/img/logo_foot_home5.png" alt />
+                                            <img src="assets/img/logo_foot_home5.png" alt />
                                         </div>
                                     </div>
                                     <div class="col-lg-6 text-center">
