--- a/index.html
+++ b/index.html
@@ -274,11 +274,11 @@
                                                 tailored to your unique needs.
                                             </div>
                                             <div class="btns d-flex align-items-center mt-60">
-                                                <a href="/page-about-5"
+                                                <a href="About_Us.html"
                                                     class="btn rounded-pill butn-blue6 hover-blue2 sm-butn fw-bold me-3">
                                                     <span> About Us <i class="bi bi-arrow-right ms-1"></i></span>
                                                 </a>
-                                                <a href="https://youtu.be/pGbIOC83-So?t=21" data-lity class="vid-btn">
+                                                <a href="" data-lity class="vid-btn">
                                                     <i class="bi bi-play"></i>
                                                     <span> Watch <br> Our Work</span>
                                                 </a>
@@ -507,7 +507,7 @@
                             </div>
 
                             <div class="text-center">
-                                <a href="/page-services-5"
+                                <a href="services.html"
                                     class="btn rounded-pill butn-blue6 hover-blue2 sm-butn fw-bold me-3">
                                     <span>See All Our Services <i class="bi bi-arrow-right ms-1"></i></span>
                                 </a>
@@ -550,7 +550,7 @@
                                 <div
                                     class="section-head mb-40 d-flex justify-content-between align-items-center style-6">
                                     <h2 class="mb-20">Features <span><small>Projects</small></span></h2>
-                                    <a href="/page-portfolio-5" class="small text-decoration-underline text-uppercase">
+                                    <a href="projects.html" class="small text-decoration-underline text-uppercase">
                                         See All Projects
                                     </a>
                                 </div>
