--- a/services.html
+++ b/services.html
@@ -646,7 +646,7 @@
                             <div class="row gx-0 justify-content-between">
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="items">
-                                        <div class="title">Iteck - 1st eCommerce Dashboard</div>
+                                        <div class="title">Kan Tec - 1st eCommerce Dashboard</div>
                                         <small class="text">
                                             Over 5 years working in IT services developing software
                                             applications and mobile apps for clients all over the
